--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,28 @@
 server {
     listen 80;
+    server_tokens on;
+
+
+    location /api/ {
+      proxy_set_header Host $host;
+      proxy_pass http://host.docker.internal:8000/api/;
+    } 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /admin/ {
+      proxy_set_header Host $http_host;
+      proxy_pass http://host.docker.internal:8000/api/;
+    }
+
+    location /media/ {
+      proxy_set_header Host $http_host;
+      alias /.media/;
+
+    }
+
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
