--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,11 +10,18 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 djoser==2.2.0
+flake8==6.1.0
 idna==3.4
+load-dotenv==0.1.0
+mccabe==0.7.0
 oauthlib==3.2.2
 Pillow==9.5.0
+psycopg2-binary==2.9.7
+pycodestyle==2.11.0
 pycparser==2.21
+pyflakes==3.1.0
 PyJWT==2.8.0
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 PyYAML==5.3.1
