--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,27 +1,32 @@
 server {
     listen 80;
+    server_name 127.0.0.1;
     server_tokens on;
 
-
-    location /api/ {
-      proxy_set_header Host $host;
-      proxy_pass http://host.docker.internal:8000/api/;
-    } 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Forwarded-Host $host;
+    proxy_set_header        X-Forwarded-Server $host;
+    proxy_pass http://backend:8000;
+    }
+
     location /admin/ {
-      proxy_set_header Host $http_host;
-      proxy_pass http://host.docker.internal:8000/api/;
+        proxy_pass   http://backend:8000/admin/;
     }
-
     location /media/ {
-      proxy_set_header Host $http_host;
-      alias /.media/;
-
+        root /var/html;
     }
-
+    location /static/admin/ {
+        root /var/html;
+    }
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
 
     location / {
         root /usr/share/nginx/html;
